# daScript

./: .gitignore  .gitmodules  CLAUDE.md  CMakeCommon.txt  CMakeLists.txt
.github/workflows/: build.yml  pages.yml
benchmarks/: README.md
benchmarks/terminal/: snapshot_scaling.das
daslib/: aot_cpp.das  aot_macro.das  aot_standalone.das  apply.das  apply_in_context.das  archive.das  array_boost.das  assert_once.das  ast.das  ast_block_to_loop.das  ast_match.das  ast_print_flags.das  async_boost.das  bitfield_trait.das  clargs.das  clipboard.das  constant_expression.das  coroutines.das  coverage.das  cpp_bind.das  das_source_formatter.das  daspkg.das  debug.das  debugger.das  decs.das  decs_boost.das  defer.das  fio.das  flatten.das  flatten_opt_common.das  flatten_opt_fold.das  flatten_opt_fuse.das  flatten_opt_pack.das  flatten_opt_preshade.das  fts5_query.das  heartbeat.das  if_not_null.das  instance_function.das  interfaces.das  jobque_boost.das  (+47 more)
dastest/: README.md  dastest.das  dastest_clargs.das  log.das  worker_policy.das
dastest/tests/: test_max_file_time.das
doc/: CMakeLists.txt
doc/reflections/: das2rst.das
doc/source/: conf.py
examples/: README.md
examples/crash/: .das_package  README.md  crash_kinds.das  main.das
examples/dasLLAMA/: run.das
examples/hv/: ws_chat_client.das  ws_chat_server.das
examples/pathTracer/: path_tracer.cpp
examples/text/: README.md  main.das  syntax_highlighting.md
include/daScript/: daScriptC.h  daScriptModule.h
install/skills/: cpp_integration.md
modules/dasClipboard/: .das_module  CMakeLists.txt  README.md
modules/dasClipboard/daslib/: clipboard.das
modules/dasClipboard/src/: aot_builtin_clipboard.h  dasClipboard.cpp
modules/dasClipboard/tools/clipboard_smoke/: README.md  external_consumers.ps1  external_probe.das  native_roundtrip.das
modules/dasHV/: .das_module  .gitignore  CMakeLists.txt  README.md
modules/dasLLAMA/: .das_module  API_REWORK.md  PUBLIC_BENCH_PLAN.md  README.md  THINKING.md  avx_kernel_matrix.md  epyc9654_measurements.md  gemm_generator_plan.md  get_x64_going.md  tune_for_this_box.md  x64_arch.md
modules/dasLLVM/: .das_module  DEBUGGING.md
modules/dasMetal/: CMakeLists.txt  MASTERPLAN.md
modules/dasSQLITE/: TUTORIALS.md
modules/dasTerminal/: .das_module  CMakeLists.txt  README.md
modules/dasTerminal/daslib/: terminal.das
modules/dasTerminal/src/: aot_builtin_terminal.h  dasTerminal.cpp  pty.cpp  pty.h  terminal.cpp  terminal.h
modules/dasTerminal/tests/: app_compat.das  conpty_probe.ps1  ownership_semantics.das  snapshot_smoke.das  terminal_semantics.das
modules/dasTerminal/tests/app_compat/: README.md  oracle-snapshots.json  oracle.mjs  package-lock.json  package.json  scenario-source.mjs  scenarios.json
modules/dasTreeSitter/: .das_module  CMakeLists.txt  README.md  VERSIONS.md
modules/dasTreeSitter/daslib/: tree_sitter.das
modules/dasTreeSitter/src/: aot_builtin_tree_sitter.h  dasTreeSitter.cpp  dasTreeSitterQueries.h.in
site/: dasllama.html
site/files/: dasllama.js
skills/: babysit.md  build_and_debug.md  cpp_integration.md  daspkg.md  documentation_rst.md  llvm_tune.md  make_pr.md  preflight.md  sql.md  style_lint.md  tutorial_prose.md  writing_tests.md
src/ast/: ast_debug_info_helper.cpp  ast_infer_type.cpp  ast_infer_type_helper.cpp  ast_inline.cpp
src/builtin/: generate_x86_64_calls.das  module_builtin_ast_serialize.cpp  module_builtin_clipboard.cpp  module_builtin_fio.cpp  module_builtin_jobque.cpp  module_builtin_math.cpp  module_builtin_rtti.cpp  module_builtin_runtime.cpp  module_jit.cpp  modules.cpp  systemV_64_wrapper.inc  win_x86_64_wrapper.inc
src/hal/: crash_handler.cpp
src/misc/: daScriptC.cpp  job_que.cpp
src/simulate/: runtime_array.cpp  simulate.cpp
tests/: .das_test  README.md
tests-cpp/big/capi_split_init/: CMakeLists.txt  test_capi_split_init.c  test_cpp_module_pull.cpp
tests-cpp/small/: test_capi_explicit_length.cpp  test_terminal.cpp
tests/_dasHV/: _common.das  test_websockets.das
tests/aot/: CMakeLists.txt
tests/clipboard/: clipboard.das
tests/dasHV/: test_websockets.das
tests/dasLLAMA/: CLAUDE.md  _model_tier.das  run.das  test_audio.das  test_batch_decode.das  test_kquant.das  test_metal_decode_parity.das  test_metal_prefill_parity.das  test_metal_support_matrix.das  test_model_image.das  test_mtp.das  test_parity.das  test_vulkan_tier.das  test_whisper.das
tests/dasSQLITE/: failed_sql_fts5.das  failed_sql_fts5_unindexed_match.das  failed_sql_global_aggregate.das  failed_sql_join_identity_select.das  failed_sql_macro.das  failed_sql_table_schema.das  test_57_sql_unique.das  test_70_sql_column_upsert.das  test_94_fts5.das
tests/daslib/: test_toml.das
tests/dastest/: test_preflight_config.das
tests/fio/: _fixture_spawn_argv.das  fio_big_io.das  fio_file.das  fio_utils.das  popen_argv.das
tests/fs/: test_fs.das
tests/jit_tests/: llvm_compile_only.das
tests/language/: _string_clone_init_helper.das  string_clone_init_multiple_contexts.das  string_clone_init_temporary.das  test_rtti_init_mnh.das
tests/long_array_table/: test_int64_overloads.das
tests/lsp/: test_lsp_protocol.das
tests/metal/: test_metal_math.das
tests/msl/: _msl_common.das  test_msl_math.das
tests/spirv/: _gen_golden.das  _spirv_common.das  _spirv_xmod.das  test_atomic_float.das  test_binding_const.das  test_bit_cast.das  test_census.das  test_compute.das  test_conf_double.das  test_conf_rejects.das  test_const_arrays.das  test_coopmat.das  test_fail_closed.das  test_float16.das  test_float64.das  test_fmod.das  test_fragment.das  test_fragment_barycentric.das  test_golden.das  test_int16.das  test_int64_block.das  test_matrix_ctor.das  test_pack_half.das  test_private_global.das  test_ray_query.das  test_raytracing.das  test_sampler_cube_array.das  test_sdot.das  test_spec_const.das  test_ssbo_array.das  test_ssbo_std430.das  test_ssbo_struct.das  test_stage_io_enabled.das  test_storage_8_16.das  test_storage_images.das  test_struct_local.das  test_struct_value.das  test_subgroup.das  (+8 more)
tree-sitter-daslang/: grammar.js
(+366 files in other folders)
