IF ((NOT DAS_CLIPBOARD_INCLUDED) AND ((NOT ${DAS_CLIPBOARD_DISABLED}) OR (NOT DEFINED DAS_CLIPBOARD_DISABLED)))
    SET(DAS_CLIPBOARD_INCLUDED TRUE)
    MESSAGE(STATUS "dasClipboard module included.")

    SET(DAS_CLIPBOARD_DIR ${CMAKE_CURRENT_LIST_DIR})
    SET(DAS_CLIPBOARD_CLIP_DIR ${DAS_CLIPBOARD_DIR}/3rdparty/clip)

    # Unsupported targets keep the same API and report `unsupported`; clip's
    # process-local fallback would incorrectly pretend to be an OS clipboard.
    SET(DAS_CLIPBOARD_NATIVE_SUPPORTED 0)
    SET(DAS_CLIPBOARD_IMAGE_SUPPORTED 0)
    SET(DAS_CLIPBOARD_CLIP_IMAGE 0)
    SET(DAS_CLIPBOARD_PLATFORM_SOURCE ${DAS_CLIPBOARD_CLIP_DIR}/clip_none.cpp)
    SET(DAS_CLIPBOARD_IMAGE_SOURCE)
    SET(DAS_CLIPBOARD_USE_XCB OFF)

    IF(WIN32)
        SET(DAS_CLIPBOARD_NATIVE_SUPPORTED 1)
        SET(DAS_CLIPBOARD_IMAGE_SUPPORTED 1)
        SET(DAS_CLIPBOARD_PLATFORM_SOURCE ${DAS_CLIPBOARD_CLIP_DIR}/clip_win.cpp)
    ELSEIF(APPLE)
        ENABLE_LANGUAGE(OBJCXX)
        SET(DAS_CLIPBOARD_NATIVE_SUPPORTED 1)
        SET(DAS_CLIPBOARD_IMAGE_SUPPORTED 1)
        SET(DAS_CLIPBOARD_CLIP_IMAGE 1)
        SET(DAS_CLIPBOARD_PLATFORM_SOURCE ${DAS_CLIPBOARD_CLIP_DIR}/clip_osx.mm)
        SET(DAS_CLIPBOARD_IMAGE_SOURCE ${DAS_CLIPBOARD_CLIP_DIR}/image.cpp)
    ELSEIF(UNIX AND NOT EMSCRIPTEN)
        FIND_PACKAGE(PkgConfig QUIET)
        IF(PkgConfig_FOUND)
            PKG_CHECK_MODULES(DAS_CLIPBOARD_XCB QUIET IMPORTED_TARGET xcb)
        ENDIF()
        IF(DAS_CLIPBOARD_XCB_FOUND)
            SET(DAS_CLIPBOARD_NATIVE_SUPPORTED 1)
            SET(DAS_CLIPBOARD_USE_XCB ON)
            SET(DAS_CLIPBOARD_PLATFORM_SOURCE ${DAS_CLIPBOARD_CLIP_DIR}/clip_x11.cpp)
        ENDIF()
    ENDIF()

    SET(DAS_CLIPBOARD_MODULE_SRC
        ${DAS_CLIPBOARD_DIR}/src/aot_builtin_clipboard.h
        ${DAS_CLIPBOARD_DIR}/src/dasClipboard.cpp
        ${DAS_CLIPBOARD_CLIP_DIR}/clip.cpp
        ${DAS_CLIPBOARD_CLIP_DIR}/clip.h
        ${DAS_CLIPBOARD_CLIP_DIR}/clip_base.h
        ${DAS_CLIPBOARD_CLIP_DIR}/clip_common.h
        ${DAS_CLIPBOARD_CLIP_DIR}/clip_lock_impl.h
        ${DAS_CLIPBOARD_IMAGE_SOURCE}
        ${DAS_CLIPBOARD_PLATFORM_SOURCE}
    )

    ADD_MODULE_CPP(Clipboard)
    ADD_MODULE_DAS(clipboard daslib clipboard)
    ADD_MODULE_LIB(libDasModuleClipboard dasModuleClipboard ${DAS_CLIPBOARD_MODULE_SRC})

    MACRO(SETUP_CLIPBOARD target)
        IF(TARGET ${target})
            TARGET_INCLUDE_DIRECTORIES(${target} PRIVATE
                ${DAS_CLIPBOARD_DIR}/src
                ${DAS_CLIPBOARD_CLIP_DIR})
            TARGET_COMPILE_DEFINITIONS(${target} PRIVATE
                CLIP_ENABLE_IMAGE=${DAS_CLIPBOARD_CLIP_IMAGE}
                CLIP_ENABLE_LIST_FORMATS=0
                DAS_CLIPBOARD_NATIVE_SUPPORTED=${DAS_CLIPBOARD_NATIVE_SUPPORTED}
                DAS_CLIPBOARD_IMAGE_SUPPORTED=${DAS_CLIPBOARD_IMAGE_SUPPORTED})
            IF(DAS_CLIPBOARD_USE_XCB)
                FIND_PACKAGE(Threads REQUIRED)
                TARGET_COMPILE_DEFINITIONS(${target} PRIVATE HAVE_XCB_XLIB_H=1)
                TARGET_LINK_LIBRARIES(${target} PRIVATE PkgConfig::DAS_CLIPBOARD_XCB Threads::Threads)
            ELSEIF(APPLE)
                FIND_LIBRARY(DAS_CLIPBOARD_COCOA_LIBRARY Cocoa REQUIRED)
                TARGET_LINK_LIBRARIES(${target} PRIVATE ${DAS_CLIPBOARD_COCOA_LIBRARY})
            ELSEIF(WIN32)
                TARGET_LINK_LIBRARIES(${target} PRIVATE user32)
            ENDIF()
            SETUP_CPP11(${target})
        ENDIF()
    ENDMACRO()

    SETUP_CLIPBOARD(libDasModuleClipboard)
    SETUP_CLIPBOARD(dasModuleClipboard)

    INSTALL(DIRECTORY ${DAS_CLIPBOARD_DIR}/daslib
        DESTINATION ${DAS_INSTALL_MODULESDIR}/dasClipboard
        FILES_MATCHING PATTERN "*.das"
        PATTERN "_aot_generated" EXCLUDE)
    INSTALL(FILES ${DAS_CLIPBOARD_DIR}/src/aot_builtin_clipboard.h
        DESTINATION ${DAS_INSTALL_MODULESDIR}/dasClipboard/src)
ENDIF()
